tests/tst/errors/Error.php
<?php
/**
 * @package axy\errors
 */

declare(strict_types=1);

namespace axy\errors\tests\tst\errors;

interface Error
{
}
